--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "react": "^17.0.1",
-    "bootstrap": "^4.6.0",
-    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^13.0.6",
@@ -36,6 +35,7 @@
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "styled-components": "^5.2.1",
     "ts-loader": "^8.0.18",
     "tslint": "^6.1.3",
     "webpack": "^5.27.1",
