--- a/package.json
+++ b/package.json
@@ -16,18 +16,23 @@
   "dependencies": {
     "@types/jquery": "^3.5.5",
     "@types/react-router-dom": "^5.1.7",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "ethers": "^5.1.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "web3modal": "^1.9.3"
   },
   "devDependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^13.0.6",
+    "@toruslabs/torus-embed": "^1.10.3",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
