--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@openzeppelin/contracts": "3",
     "@types/jquery": "^3.5.5",
     "@types/react-router-dom": "^5.1.7",
     "@web3-react/core": "^6.1.9",
