--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dev": "webpack --watch",
     "start-server": "node src/server/index.js",
     "server-dev": "nodemon src/server/index.js",
+    "package": "tar -czvf ./dist/xds.tar.gz ./public/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -25,6 +26,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "truffle-contract-size": "^2.0.1",
     "typescript": "^4.2.3",
     "web3modal": "^1.9.3"
   },
