--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "chai": "^4.3.4",
     "ethers": "^5.1.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
