Remove bundle license from git

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,7 @@ build/contracts/*.json
 ### dist
 dist/*.tar.gz
 
-
 ### public assets
 public/img
 public/fonts
-public/bundle.js
-
+public/bundle.*
