--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "3",
+    "@truffle/hdwallet-provider": "^1.3.1",
     "@types/jquery": "^3.5.5",
     "@types/react-router-dom": "^5.1.7",
     "chai": "^4.3.4",
