--- a/package.json
+++ b/package.json
@@ -21,16 +21,26 @@
     "@truffle/hdwallet-provider": "^1.3.1",
     "@types/jquery": "^3.5.5",
     "@types/react-router-dom": "^5.1.7",
+    "@walletconnect/web3-provider": "^1.4.1",
+    "assert": "^2.0.0",
     "chai": "^4.3.4",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^8.2.0",
     "ethers": "^5.1.0",
     "express": "^4.17.1",
+    "https-browserify": "^1.0.0",
     "jquery": "^3.6.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "truffle-contract-size": "^2.0.1",
     "typescript": "^4.2.3",
+    "url": "^0.11.0",
+    "util": "^0.12.3",
     "web3modal": "^1.9.3"
   },
   "devDependencies": {
