--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/index.ts",
   "scripts": {
     "lint-frontend": "tslint -c tslint.json -p tsconfig.json --fix",
+    "migrate-development": "truffle migrate",
+    "migrate-testnet": "truffle migrate --network sokol",
+    "migrate-production": "truffle migrate --network xdai",
     "build-production": "webpack --mode=production --env NETWORK=xdai",
     "build-testnet": "webpack --mode=production --env NETWORK=sokol",
     "build-development": "webpack --mode=production --env NETWORK=development",
