--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "dist/index.ts",
   "scripts": {
-    "lint-frontend": "tslint -c tslint.json -p tsconfig.json --fix",
     "migrate-development": "truffle migrate",
+    "build-development": "webpack --env NETWORK=development",
+    "redeploy-development": "truffle migrate --reset && yarn run build-development",
     "migrate-testnet": "truffle migrate --network sokol",
-    "migrate-production": "truffle migrate --network xdai",
-    "build-development": "webpack --mode=production --env NETWORK=development",
     "build-testnet": "webpack --mode=production --env NETWORK=sokol",
+    "redeploy-testnet": "truffle migrate --reset && yarn run build-development",
+    "migrate-production": "truffle migrate --network xdai",
     "build-production": "webpack --mode=production --env NETWORK=xdai",
-    "react-dev": "webpack --watch --env NETWORK=development",
+    "frontend-dev": "webpack --watch --env NETWORK=development",
     "start-server": "node src/server/index.js",
     "server-dev": "nodemon src/server/index.js",
     "package": "tar -czvf ./dist/xds.tar.gz ./public/",
