--- a/src/server/data/sampleProjects/testProject.json
+++ b/src/server/data/sampleProjects/testProject.json
@@ -1,15 +1,16 @@
 {
-    "projectName": "Sample Project",
-    "websiteURL": "https://sampleproject.crypto",
-    "whitepaper": "https://sampleproject.crypto/whitepaper",
-    "telegram": "@sampleProject",
-    "description": "A sample project",
-    "linkedins": "",
-    "github": "l",
-    "stateOfDevelopment": "j",
-    "amountRaised": "k",
-    "hardcap": "1000",
-    "year": "2021",
-    "month": "1",
-    "day": "1"
+  "contactName": "Sam Hodak",
+  "contactSocial": "@samHodak",
+  "contactEmail": "sam@samhodak.com",
+  "projectName": "Test Project",
+  "websiteURL": "https://testproject.com",
+  "whitepaper": "https://testproject.com/whitepaper",
+  "socialHandle": "@testProject",
+  "description": "A test project",
+  "founders": "linkedin.com/sam, linkedin.com/dan",
+  "github": "http://github.com/testProject",
+  "stateOfDevelopment": "Proof of concept",
+  "amountRaised": "0",
+  "hardcap": "10000",
+  "launchDate": "2022-05-10"
 }
