Change all references to telegram to generic chat; begin Server handling presale creation

--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "dist/index.ts",
   "scripts": {
     "migrate-development": "truffle migrate",
-    "build-development": "webpack --env NETWORK=development",
-    "redeploy-development": "truffle migrate --reset && yarn run build-development",
     "migrate-testnet": "truffle migrate --network sokol",
-    "build-testnet": "webpack --mode=production --env NETWORK=sokol",
-    "redeploy-testnet": "truffle migrate --reset && yarn run build-development",
     "migrate-production": "truffle migrate --network xdai",
+    "build-development": "webpack --env NETWORK=development",
+    "build-testnet": "webpack --mode=production --env NETWORK=sokol",
     "build-production": "webpack --mode=production --env NETWORK=xdai",
+    "redeploy-development": "truffle migrate --reset && yarn run build-development",
+    "redeploy-testnet": "truffle migrate --reset && yarn run build-development",
+    "start-server-development": "node src/server/index.js",
+    "start-server-testnet": "ENV=sokol node src/server/index.js",
+    "start-server-production": "ENV=xdai node src/server/index.js",
     "frontend-dev": "webpack --watch --env NETWORK=development",
-    "start-server": "node src/server/index.js",
     "server-dev": "nodemon src/server/index.js",
     "package": "tar -czvf ./dist/xds.tar.gz ./public/",
     "test": "echo \"Error: no test specified\" && exit 1"
