Update sample project json

--- a/src/server/data/sampleProjects/testProject.json
+++ b/src/server/data/sampleProjects/testProject.json
@@ -5,7 +5,8 @@
   "projectName": "Test Project",
   "websiteURL": "https://testproject.com",
   "whitepaper": "https://testproject.com/whitepaper",
-  "socialHandle": "@testProject",
+  "linkTwitter": "@testProject",
+  "linkChat": "discord.com/testproject",
   "description": "A test project",
   "founders": "linkedin.com/sam, linkedin.com/dan",
   "github": "http://github.com/testProject",
